tests/paczka1/fuzzy1/12175855.err
Error in line 13: gsUBnXDg1sY S967 212,6
Error in line 20: S231 S6#8 80,7
Error in line 19: NPUrHBc A154 35,5
Error in line 32: I1DT S231 80,0
